@@ -1,3 +1,8 @@
+2007-10-09  Martin Lambers <marlam@marlam.de>
+
+	* * mhlib/mh_os.h, mhlib/mh_os.c, src/main.cpp: Rename DIRSEP to
+	MH_DIRSEP. Update the users accordingly.
+
 2007-10-03  Martin Lambers <marlam@marlam.de>
 
 	* configure.ac, doc/cvlview.texi, doc/cvlview.1, NEWS: Update for
